--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h3>Overview</h3>
     <p>My name's Yichen Yang. I am from Shanghai,China. Shanghai is one of the four municipality cities in China. Shanghai is becoming the international economy, finance, trade, shipping, technological innovation center.</p>
     <p>Shanghai has a total area of 6340 square kilometers. It has over 16 municipal districts and the climate there is subtropical humid monsoon climate.Shanghai's GDP ranks first in China's cities and second in Asian cities, second only to Tokyo , Japan . Shanghai is one of the world's most famous financial centers , with the largest population and largest metropolitan area in the world.</p>
-    <img src = "howntownimage/Shanghai.jpg" alt= height="300" width="600">
+    <img src = "howntownimage/shanghai.jpg" alt= height="300" width="600">
   </section>
   <section>
     <h3>Diet</h3>
