add the navigation to resume and bns pages

--- a/resume.html
+++ b/resume.html
@@ -5,6 +5,13 @@
 	<title>Yichen Yang Resume</title>
 </head>
 <body>
+	<nav>
+    <ul>
+	      <li><a href = "index.html">Homepage</a></li>
+	      <li><a href = "bns.html">Blade and soul</a></li>
+	      <li><a href = "resume.html">My Resume</a></li>
+    </ul>
+  </nav>
   <h1>Resume</h1>
 	<section>
 		<h2>Personal information</h2>
@@ -60,7 +67,7 @@
 			<li>Communication skills: Documenting, co-operation, version control</li>
 			<li>Language: English, Mandarin</li>
 		</ul>
-		
+
 
 </body>
 </html>
