--- a/bns.html
+++ b/bns.html
@@ -5,6 +5,13 @@
 	<title>bladeandsoul</title>
 </head>
 <body>
+	<nav>
+    <ul>
+	      <li><a href = "index.html">Homepage</a></li>
+	      <li><a href = "bns.html">Blade and soul</a></li>
+	      <li><a href = "resume.html">My Resume</a></li>
+    </ul>
+  </nav>
   <h1>Blade and soul</h1>
   <section>
     <h2> My experience in bns</h2>
