--- a/bns.html
+++ b/bns.html
@@ -7,7 +7,7 @@
 <body>
   <nav>
     <ul>
-  <li><a href = "index.html">Homepage</a></li>
+      <li><a href = "index.html">Homepage</a></li>
       <li><a href = "bns.html">Blade and soul</a></li>
       <li><a href = "resume.html">My Resume</a></li>
   </ul>
@@ -23,12 +23,13 @@
       <source src="bnsvideo/bns.mp4" type="video/mp4">
     </video>
   </section>
-<section>
-  <h2>My character image</h2>
-  <img src = "bnsimage/bns1.jpg" alt= height="600" width="600">
-  <img src = "bnsimage/bns2.jpg" alt= height="600" width="600">
-  <img src = "bnsimage/bns3.jpg" alt= height="600" width="600">
-  <img src = "bnsimage/bns4.jpg" alt= height="600" width="600">
-  <img src = "bnsimage/bns5.jpg" alt= height="600" width="600">
+  <section>
+    <h2>My character image</h2>
+    <img src = "bnsimage/bns1.jpg" alt= height="600" width="600">
+    <img src = "bnsimage/bns2.jpg" alt= height="600" width="600">
+    <img src = "bnsimage/bns3.jpg" alt= height="600" width="600">
+    <img src = "bnsimage/bns4.jpg" alt= height="600" width="600">
+    <img src = "bnsimage/bns5.jpg" alt= height="600" width="600">
+  </section>
 </body>
 </html>
