add sections and body

--- a/index.html
+++ b/index.html
@@ -27,4 +27,5 @@
     <img src = "howntownimage/food1.jpg" alt= height="300" width="400">
     <img src = "howntownimage/food2.jpg" alt= height="300" width="400">
   </section>
+</body>
 </html>
