--- a/resume.html
+++ b/resume.html
@@ -67,5 +67,6 @@
       <li>Communication skills: Documenting, co-operation, version control</li>
       <li>Language: English, Mandarin</li>
     </ul>
+  </section>
 </body>
 </html>
