delete the image width and height attribute

--- a/bns.html
+++ b/bns.html
@@ -25,11 +25,11 @@
   </section>
   <section>
     <h2>My character image</h2>
-    <img src = "bnsimage/bns1.jpg" alt= height="600" width="600">
-    <img src = "bnsimage/bns2.jpg" alt= height="600" width="600">
-    <img src = "bnsimage/bns3.jpg" alt= height="600" width="600">
-    <img src = "bnsimage/bns4.jpg" alt= height="600" width="600">
-    <img src = "bnsimage/bns5.jpg" alt= height="600" width="600">
+    <img src = "bnsimage/bns1.jpg">
+    <img src = "bnsimage/bns2.jpg">
+    <img src = "bnsimage/bns3.jpg">
+    <img src = "bnsimage/bns4.jpg">
+    <img src = "bnsimage/bns5.jpg">
   </section>
 </body>
 </html>
