add css on navigation bar

--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
 <head>
   <meta charset = "UTF-8">
   <title>Yichen Yang Project 1</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
   <h1>Project 1 homepage</h1>
-  <nav>
+  <nav class ="navbar">
     <ul>
-     	<li><a href = "index.html">Homepage</a></li>
+     	<li><a class = "active" href = "index.html">Homepage</a></li>
       <li><a href = "bns.html">Blade and soul</a></li>
       <li><a href = "resume.html">My Resume</a></li>
     </ul>
   </nav>
+
   <h2>Hometown</h2>
   <section>
     <h3>Overview</h3>
