--- a/resume.html
+++ b/resume.html
@@ -3,13 +3,15 @@
 <head>
   <meta charset = "UTF-8">
   <title>Yichen Yang Resume</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
-  <nav>
+  <nav class ="navbar">
     <ul>
       <li><a href = "index.html">Homepage</a></li>
       <li><a href = "bns.html">Blade and soul</a></li>
-      <li><a href = "resume.html">My Resume</a></li>
+      <li><a class = "active" href = "resume.html">My Resume</a></li>
     </ul>
   </nav>
   <h1>Resume</h1>
