--- a/bns.html
+++ b/bns.html
@@ -3,13 +3,15 @@
 <head>
   <meta charset = "UTF-8">
   <title>bladeandsoul</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 
 <body>
-  <nav>
+  <nav class = "navbar">
     <ul>
       <li><a href = "index.html">Homepage</a></li>
-      <li><a href = "bns.html">Blade and soul</a></li>
+      <li><a  class = "active" href = "bns.html">Blade and soul</a></li>
       <li><a href = "resume.html">My Resume</a></li>
   </ul>
   </nav>
@@ -24,7 +26,7 @@
       <source src = "bnsvideo/bns.mp4" type = "video/mp4">
     </video>
   </section>
-  
+
   <section>
     <h2>My character image</h2>
     <img src = "bnsimage/bns1.jpg">
