add resume page css

--- a/bns.html
+++ b/bns.html
@@ -5,6 +5,7 @@
   <title>bladeandsoul</title>
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
 </head>
 
 <body>
