--- a/resume.html
+++ b/resume.html
@@ -5,6 +5,7 @@
   <title>Yichen Yang Resume</title>
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
 </head>
 <body>
   <nav class ="navbar">
@@ -14,61 +15,63 @@
       <li><a class = "active" href = "resume.html">My Resume</a></li>
     </ul>
   </nav>
-  <h1>Resume</h1>
-  <section>
-    <h2>Personal information</h2>
-    <p>Name: Yichen Yang </p>
-    <p>Address: 501 E 32nd St Apt 1014, Chicago, IL 60616 </p>
-    <p>Phone: (312)-459-8380</p>
-    <p>E-mail: yyang153@hawk.iit.edu</p>
-  </section>
-  <section>
-    <h2>Education</h2>
-    <h3>Illinois Institute of Technologies</h3>
-    <p>B.S. in Computer Science</p>
-    <ul>
-      <li>GPA: 3.5</li>
-      <li>International Academic Scholarship</li>
-    </ul>
-    <p>Coursework: Mobile Applications Development, Data Mining, Information Security, Programming Languages and Translators, Operating Systems, Systems Programming, Algorithms and Data Structures, Database, Object-Oriented Programming</p>
-  </section>
-  <section>
-    <h2>Class Projects</h2>
-    <h3>C-like Language Interpreter</h3>
-    <p>Programming Languages and Translators Final Project </p>
-    <ul>
-      <li>Designed a little C-like language that has essential functionality such as for-loop, while-loop, if/else conditioning and basic numerical operations.</li>
-      <li>Built the lexical analyzer using flex, and the parser for the language using bison.</li>
-    </ul>
-    <h3>Book Tracking Web Application</h3>
-    <p>Database Organization Final Project</p>
-    <ul>
-      <li>Designed a book tracking web application for a small repository of school books.</li>
-      <li>Wrote HTML and PHP for web page layout.</li>
-      <li>Utilized MySQL for creating and maintaining the database.</li>
-    </ul>
-    <h3>Power Usage Simulation Program </h3>
-    <p>Object Oriented Programming Final Project</p>
-    <ul>
-      <li>Implemented a power control algorithm using Java to simulate the power usage of millions of appliances and to determine the best solution to save power grid.</li>
-      <li>Constructed a discrete event simulator to test the performance of system in case of emergencies.</li>
-      <li>Presented a detailed report with statistics on locations effected during each interval.</li>
-    </ul>
-    <h3>Student Assist Application</h3>
-    <p>Software Engineering Final Project</p>
-    <ul>
-      <li>Design and prototype a “Student Assist” app</li>
-      <li>Discover ways in which students could benefit from assistance in all aspects of earning their degree</li>
-      <li>Engineering: Utilize available data and technologies to design a system that will address the opportunities</li>
+  <h1 class = "resumeTitle">Resume</h1>
+  <div class ="content-wrapper">
+    <section>
+      <h2>Personal information</h2>
+      <p>Name: Yichen Yang </p>
+      <p>Address: 501 E 32nd St Apt 1014, Chicago, IL 60616 </p>
+      <p>Phone: (312)-459-8380</p>
+      <p>E-mail: yyang153@hawk.iit.edu</p>
+    </section>
+    <section>
+      <h2>Education</h2>
+      <h3>Illinois Institute of Technologies</h3>
+      <p>B.S. in Computer Science</p>
+      <ul>
+        <li>GPA: 3.5</li>
+        <li>International Academic Scholarship</li>
       </ul>
-  </section>
-  <section>
-    <h2>Skills</h2>
-    <ul>
-      <li>Programming language: Python, Java, C/C++, Mathematica, HTML/CSS, PHP, MySQL, OCaml, R</li>
-      <li>Communication skills: Documenting, co-operation, version control</li>
-      <li>Language: English, Mandarin</li>
-    </ul>
-  </section>
+      <p>Coursework: Mobile Applications Development, Data Mining, Information Security, Programming Languages and Translators, Operating Systems, Systems Programming, Algorithms and Data Structures, Database, Object-Oriented Programming</p>
+    </section>
+    <section>
+      <h2>Class Projects</h2>
+      <h3>C-like Language Interpreter</h3>
+      <p>Programming Languages and Translators Final Project </p>
+      <ul>
+        <li>Designed a little C-like language that has essential functionality such as for-loop, while-loop, if/else conditioning and basic numerical operations.</li>
+        <li>Built the lexical analyzer using flex, and the parser for the language using bison.</li>
+      </ul>
+      <h3>Book Tracking Web Application</h3>
+      <p>Database Organization Final Project</p>
+      <ul>
+        <li>Designed a book tracking web application for a small repository of school books.</li>
+        <li>Wrote HTML and PHP for web page layout.</li>
+        <li>Utilized MySQL for creating and maintaining the database.</li>
+      </ul>
+      <h3>Power Usage Simulation Program </h3>
+      <p>Object Oriented Programming Final Project</p>
+      <ul>
+        <li>Implemented a power control algorithm using Java to simulate the power usage of millions of appliances and to determine the best solution to save power grid.</li>
+        <li>Constructed a discrete event simulator to test the performance of system in case of emergencies.</li>
+        <li>Presented a detailed report with statistics on locations effected during each interval.</li>
+      </ul>
+      <h3>Student Assist Application</h3>
+      <p>Software Engineering Final Project</p>
+      <ul>
+        <li>Design and prototype a “Student Assist” app</li>
+        <li>Discover ways in which students could benefit from assistance in all aspects of earning their degree</li>
+        <li>Engineering: Utilize available data and technologies to design a system that will address the opportunities</li>
+        </ul>
+    </section>
+    <section>
+      <h2>Skills</h2>
+      <ul>
+        <li>Programming language: Python, Java, C/C++, Mathematica, HTML/CSS, PHP, MySQL, OCaml, R</li>
+        <li>Communication skills: Documenting, co-operation, version control</li>
+        <li>Language: English, Mandarin</li>
+      </ul>
+    </section>
+  </div>
 </body>
 </html>
