--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <title>Yichen Yang Project 1</title>
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
 </head>
 <body>
-  <h1>Project 1 homepage</h1>
   <nav class ="navbar">
     <ul>
      	<li><a class = "active" href = "index.html">Homepage</a></li>
