--- a/resume.html
+++ b/resume.html
@@ -16,7 +16,7 @@
     </ul>
   </nav>
   <h1 class = "resumeTitle">Resume</h1>
-  <div class ="content-wrapper">
+  <div class ="resume-wrapper">
     <section>
       <h2>Personal information</h2>
       <p>Name: Yichen Yang </p>
