modify image css

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     <div class = "subsection">
       <section>
         <h3>Diet</h3>
+        <img class = "two" src = "howntownimage/food1.jpg">
+        <img class = "two" src = "howntownimage/food2.jpg">
         <p>Shanghai’s local dishes refer to Shanghai’s local flavors, which can be served with concentrated red sauce.(Oil is rich in flavor, heavy in sugar, bright in color). Commonly used cooking methods are mainly braised, braised, and sugary. The taste is salty and sweet, oily and not greasy.</p>
         <p>In the local cooking, the specialties in the leek are oily paste , oily prawn , oily crab , pot roast , braised circle , bergamot, braised back fish , yellow chestnut chicken, etc. The characteristics of the vegetable thick oil red sauce. Shanghai vegetables have a variety of seasonal dishes depending on the season. Malan Head , Chives , Chicken Cabbage , Shanghai Rape, etc. are very refreshing. The citizens are early - the four King Kong: big cake, fried dough sticks, risotto rice , bean curd paste .</p>
-        <img src = "howntownimage/food1.jpg">
-        <img src = "howntownimage/food2.jpg">
       </section>
     </div>
   </div>
