add css for bns page

--- a/bns.html
+++ b/bns.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Charmonman" rel="stylesheet">
 </head>
 
 <body>
@@ -24,19 +25,19 @@
       <p>My favorite mmorpg game is Blade and soul. I have been playing this game for 3 years. I am currently on Yura server and the force master is my main class. I am glad if any of you play this game too.</p>
       <p>Blade & Soul is a Korean fantasy martial-arts massively multiplayer online role-playing game developed by NCSOFT (Team Bloodlust). On September 13, 2012, NCSOFT announced that Blade & Soul would release in Western territories, which eventually happened on January 19, 2016. A Japanese animated television adaptation aired on April 3, 2014 on TBS and other stations then finished on June 26, 2014.
       <p>Recently bns released the new class warrior as the 11th class. You would fall in love with this game if you enjoy playing mmorpg games.The Blade & Soul: Warden’s Fury update brings with it new Warden class, Act 9 of the main story, a new 6-player Heroic Dungeon—The Shadowmoor, balance and systems changes, and a lot more!</p>
-      <p>Here's the video of the recent update</p>
-      <video width = "300" height = "400" controls>
+      <p class = "comment">Here's the video of the recent update</p>
+      <video controls>
         <source src = "bnsvideo/bns.mp4" type = "video/mp4">
       </video>
     </section>
 
     <section class = "subsection">
       <h2>My character image</h2>
-      <img src = "bnsimage/bns1.jpg">
-      <img src = "bnsimage/bns2.jpg">
-      <img src = "bnsimage/bns3.jpg">
-      <img src = "bnsimage/bns4.jpg">
-      <img src = "bnsimage/bns5.jpg">
+      <img class = "bnsimage" src = "bnsimage/bns1.jpg">
+      <img class = "bnsimage" src = "bnsimage/bns2.jpg">
+      <img class = "bnsimage" src = "bnsimage/bns3.jpg">
+      <img class = "bnsimage" src = "bnsimage/bns4.jpg">
+      <img class = "bnsimage" src = "bnsimage/bns5.jpg">
     </section>
   </div>
 </body>
