change background of each page

--- a/bns.html
+++ b/bns.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Charmonman" rel="stylesheet">
 </head>
 
-<body>
+<body class = "bnsbody">
   <nav class = "navbar">
     <ul>
       <li><a href = "index.html">Homepage</a></li>
