--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
-<body>
+<body class = "indexbody">
   <nav class ="navbar">
     <ul>
      	<li><a class = "active" href = "index.html">Homepage</a></li>
