--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
 </head>
-<body>
+<body class = "resumebody">
   <nav class ="navbar">
     <ul>
       <li><a href = "index.html">Homepage</a></li>
