ad one more image to the bns page

--- a/bns.html
+++ b/bns.html
@@ -38,6 +38,7 @@
       <img class = "bnsimage" src = "bnsimage/bns3.jpg">
       <img class = "bnsimage" src = "bnsimage/bns4.jpg">
       <img class = "bnsimage" src = "bnsimage/bns5.jpg">
+      <img class = "bnsimage" src = "bnsimage/bns6.jpg">
     </section>
   </div>
 </body>
