move image files into one folder and center navigation bar

--- a/bns.html
+++ b/bns.html
@@ -33,12 +33,12 @@
 
     <section class = "subsection">
       <h2>My character image</h2>
-      <img class = "bnsimage" src = "bnsimage/bns1.jpg">
-      <img class = "bnsimage" src = "bnsimage/bns2.jpg">
-      <img class = "bnsimage" src = "bnsimage/bns3.jpg">
-      <img class = "bnsimage" src = "bnsimage/bns4.jpg">
-      <img class = "bnsimage" src = "bnsimage/bns5.jpg">
-      <img class = "bnsimage" src = "bnsimage/bns6.jpg">
+      <img class = "bnsimage" src = "image/bns1.jpg">
+      <img class = "bnsimage" src = "image/bns2.jpg">
+      <img class = "bnsimage" src = "image/bns3.jpg">
+      <img class = "bnsimage" src = "image/bns4.jpg">
+      <img class = "bnsimage" src = "image/bns5.jpg">
+      <img class = "bnsimage" src = "image/bns6.jpg">
     </section>
   </div>
 </body>
