--- a/bns.html
+++ b/bns.html
@@ -26,9 +26,11 @@
       <p>Blade & Soul is a Korean fantasy martial-arts massively multiplayer online role-playing game developed by NCSOFT (Team Bloodlust). On September 13, 2012, NCSOFT announced that Blade & Soul would release in Western territories, which eventually happened on January 19, 2016. A Japanese animated television adaptation aired on April 3, 2014 on TBS and other stations then finished on June 26, 2014.
       <p>Recently bns released the new class warrior as the 11th class. You would fall in love with this game if you enjoy playing mmorpg games.The Blade & Soul: Warden’s Fury update brings with it new Warden class, Act 9 of the main story, a new 6-player Heroic Dungeon—The Shadowmoor, balance and systems changes, and a lot more!</p>
       <p class = "comment">Here's the video of the recent update</p>
-      <video controls>
+    <h2>
+      <video controls class = "bnsvideo">
         <source src = "bnsvideo/bns.mp4" type = "video/mp4">
       </video>
+    </h2>
     </section>
 
     <section class = "subsection">
