No spaces on either side of the = sign of attributes

--- a/bns.html
+++ b/bns.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset = "UTF-8">
+  <meta charset="UTF-8">
   <title>bladeandsoul</title>
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
@@ -9,38 +9,38 @@
   <link href="https://fonts.googleapis.com/css?family=Charmonman" rel="stylesheet">
 </head>
 
-<body class = "bnsbody">
-  <nav class = "navbar">
+<body class="bnsbody">
+  <nav class="navbar">
     <ul>
-      <li><a href = "index.html">Homepage</a></li>
-      <li><a  class = "active" href = "bns.html">Blade and soul</a></li>
-      <li><a href = "resume.html">My Resume</a></li>
+      <li><a href="index.html">Homepage</a></li>
+      <li><a class="active" href = "bns.html">Blade and soul</a></li>
+      <li><a href="resume.html">My Resume</a></li>
   </ul>
   </nav>
 
-  <div class = "bns-wrapper">
+  <div class="bns-wrapper">
     <h1>Blade and soul</h1>
-    <section class = "subsection">
+    <section class="subsection">
       <h2> My experience in bns</h2>
       <p>My favorite mmorpg game is Blade and soul. I have been playing this game for 3 years. I am currently on Yura server and the force master is my main class. I am glad if any of you play this game too.</p>
       <p>Blade & Soul is a Korean fantasy martial-arts massively multiplayer online role-playing game developed by NCSOFT (Team Bloodlust). On September 13, 2012, NCSOFT announced that Blade & Soul would release in Western territories, which eventually happened on January 19, 2016. A Japanese animated television adaptation aired on April 3, 2014 on TBS and other stations then finished on June 26, 2014.
       <p>Recently bns released the new class warrior as the 11th class. You would fall in love with this game if you enjoy playing mmorpg games.The Blade & Soul: Warden’s Fury update brings with it new Warden class, Act 9 of the main story, a new 6-player Heroic Dungeon—The Shadowmoor, balance and systems changes, and a lot more!</p>
       <p class = "comment">Here's the video of the recent update</p>
     <h2>
-      <video controls class = "bnsvideo">
-        <source src = "bnsvideo/bns.mp4" type = "video/mp4">
+      <video controls class="bnsvideo">
+        <source src="bnsvideo/bns.mp4" type="video/mp4">
       </video>
     </h2>
     </section>
 
-    <section class = "subsection">
+    <section class="subsection">
       <h2>My character image</h2>
-      <img class = "bnsimage" src = "image/bns1.jpg">
-      <img class = "bnsimage" src = "image/bns2.jpg">
-      <img class = "bnsimage" src = "image/bns3.jpg">
-      <img class = "bnsimage" src = "image/bns4.jpg">
-      <img class = "bnsimage" src = "image/bns5.jpg">
-      <img class = "bnsimage" src = "image/bns6.jpg">
+      <img class="image" src = "image/bns1.jpg">
+      <img class="image" src = "image/bns2.jpg">
+      <img class="image" src = "image/bns3.jpg">
+      <img class="image" src = "image/bns4.jpg">
+      <img class="image" src = "image/bns5.jpg">
+      <img class="image" src = "image/bns6.jpg">
     </section>
   </div>
 </body>
