Change all special characters to utf-8 code and add custom css

--- a/resume.html
+++ b/resume.html
@@ -21,8 +21,8 @@
       <h2>Personal information</h2>
       <p>Name: Yichen Yang </p>
       <p>Address: 501 E 32nd St Apt 1014, Chicago, IL 60616 </p>
-      <p>Phone: (312)-459-8380</p>
-      <p>E-mail: yyang153@hawk.iit.edu</p>
+      <p>Phone: (312)&#45;459&#45;8380</p>
+      <p>E-mail: yyang153&#64;hawk.iit.edu</p>
     </section>
     <section>
       <h2>Education</h2>
